--- a/nicnbk-ui-angular2/src/app/hf/view/hf.fund-search.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.fund-search.component.html
@@ -62,51 +62,52 @@
     <div>
         <label>Total found: <span>{{searchResult?.totalElements > 0 ?  searchResult?.totalElements : 0}}</span></label>
     </div>
-    <div class="row pull-right">
-        <ul class="pagination" *ngIf="searchResult?.showPageFrom > 0">
-            <li><a *ngIf="searchResult?.showPageFrom > 1" (click)="search(searchResult.showPageFrom - 1)">&laquo;</a></li>
-            <li *ngFor="let i of range(searchResult.showPageFrom, searchResult.showPageTo)" [class.active]="i == searchResult.currentPage">
-                <a (click)="search(i)">{{i}}</a>
-            </li>
-            <li><a *ngIf="searchResult.showPageTo < searchResult.totalPages" (click)="search(searchResult.showPageTo + 1)">&raquo;</a></li>
-        </ul>
-    </div>
-    <!--<div style="position: relative">-->
+    <div class="row withpadding" style="position: relative; min-height: 80px;">
+        <div class="row pull-right">
+            <ul class="pagination" *ngIf="searchResult?.showPageFrom > 0">
+                <li><a *ngIf="searchResult?.showPageFrom > 1" (click)="search(searchResult.showPageFrom - 1)">&laquo;</a></li>
+                <li *ngFor="let i of range(searchResult.showPageFrom, searchResult.showPageTo)" [class.active]="i == searchResult.currentPage">
+                    <a (click)="search(i)">{{i}}</a>
+                </li>
+                <li><a *ngIf="searchResult.showPageTo < searchResult.totalPages" (click)="search(searchResult.showPageTo + 1)">&raquo;</a></li>
+            </ul>
+        </div>
         <table [ngBusy]="busy" class="table table-hover">
-        <thead>
-        <tr>
-            <th>&nbsp;</th>
-            <th>FUND</th>
-            <th>MANAGER</th>
-            <th>INCEPTION</th>
-            <th>UPDATED</th>
-            <th>ACTIONS</th>
-        </tr>
-        </thead>
+            <thead>
+            <tr>
+                <th>&nbsp;</th>
+                <th>FUND</th>
+                <th>MANAGER</th>
+                <th>INCEPTION</th>
+                <th>UPDATED</th>
+                <th>ACTIONS</th>
+            </tr>
+            </thead>
 
-        <tbody>
+            <tbody>
 
-        <tr *ngFor = "let fund of foundEntities">
-            <td width="5%"></td>
-            <td width="30%"><a [routerLink]="['/hf/fundProfile/', fund.id]">{{fund.name}}</a></td>
-            <td width="30%"><a [routerLink]="['/hf/managerProfile/', fund.manager.id]">{{fund.manager.name}}</a></td>
-            <td width="10%">{{fund.inceptionDate}}</td>
-            <td width="10%">{{fund.updateDate}}</td>
-            <td width="5%">
-                <a><i class="glyphicon glyphicon-file"></i></a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+            <tr *ngFor = "let fund of foundEntities">
+                <td width="5%"></td>
+                <td width="30%"><a [routerLink]="['/hf/fundProfile/', fund.id]">{{fund.name}}</a></td>
+                <td width="30%"><a [routerLink]="['/hf/managerProfile/', fund.manager.id]">{{fund.manager.name}}</a></td>
+                <td width="10%">{{fund.inceptionDate}}</td>
+                <td width="10%">{{fund.updateDate}}</td>
+                <td width="5%">
+                    <a><i class="glyphicon glyphicon-file"></i></a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
 
-    <!--</div>-->
-    <div class="row pull-right">
-        <ul class="pagination" *ngIf="searchResult?.showPageFrom > 0">
-            <li><a *ngIf="searchResult?.showPageFrom > 1" (click)="search(searchResult.showPageFrom - 1)">&laquo;</a></li>
-            <li *ngFor="let i of range(searchResult.showPageFrom, searchResult.showPageTo)" [class.active]="i == searchResult.currentPage">
-                <a (click)="search(i)">{{i}}</a>
-            </li>
-            <li><a *ngIf="searchResult.showPageTo < searchResult.totalPages" (click)="search(searchResult.showPageTo + 1)">&raquo;</a></li>
-        </ul>
+        <!--</div>-->
+        <div class="row pull-right">
+            <ul class="pagination" *ngIf="searchResult?.showPageFrom > 0">
+                <li><a *ngIf="searchResult?.showPageFrom > 1" (click)="search(searchResult.showPageFrom - 1)">&laquo;</a></li>
+                <li *ngFor="let i of range(searchResult.showPageFrom, searchResult.showPageTo)" [class.active]="i == searchResult.currentPage">
+                    <a (click)="search(i)">{{i}}</a>
+                </li>
+                <li><a *ngIf="searchResult.showPageTo < searchResult.totalPages" (click)="search(searchResult.showPageTo + 1)">&raquo;</a></li>
+            </ul>
+        </div>
     </div>
 </div>
