monitoring layout and data update

--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-hedge-funds-2.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-hedge-funds-2.component.html
@@ -269,11 +269,11 @@
                                 </tr>
                                 <tr>
                                     <td style="font-weight: bold">Number of investment managers</td>
-                                    <td>N/A</td>
+                                    <td>1</td>
                                 </tr>
                                 <tr>
                                     <td style="font-weight: bold">Number of funds</td>
-                                    <td>N/A</td>
+                                    <td>1</td>
                                 </tr>
                                 <tr>
                                     <td style="font-weight: bold">Strategy</td>
@@ -281,6 +281,12 @@
                                 </tr>
                             </table>
                         </div>
+                        <div class="row"> <!-- Returns-->
+                            <div class="col-md-12">
+                                <div id="classBComparisonReturns"></div>
+                            </div>
+                        </div>
+                        <br/>
                         <div class="row">
                             <b>Approved Fund List:</b><br/><br/>
                             <ul>
