--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-hedge-funds.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-hedge-funds.component.html
@@ -24,7 +24,16 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-6">
-                <div id="value_nav">
+                <br>
+                <div class="row">
+                    <div id="value_nav">
+                    </div>
+                </div>
+                <br>
+                <br>
+                <div class="row">
+                    <div id="value_performance">
+                    </div>
                 </div>
             </div>
             <div class="col-md-6" rowspan="2">
@@ -33,15 +42,15 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-6">
-                <div id="value_performance">
-                </div>
-            </div>
-            <div class="col-md-6">&nbsp;</div>
-        </div>
-    </div>
+    <!--<div class="row">-->
+        <!--<div class="col-md-12">-->
+            <!--<div class="col-md-6">-->
+                <!--<div id="value_performance">-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-md-6">&nbsp;</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
     <br/>
     <div class="row">
