1) PE fund profile loading bug fix. 2) update date fixed for fund and firm

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
@@ -192,9 +192,9 @@
                                 <td width="5%"></td>
                                 <td width="20%"><a [routerLink]="['/pe/fundProfile/',fund.id, firm.id]">{{fund.fundName}}</a></td>
                                 <td width="5%">{{fund.status}}</td>
-                                <td width="5%">{{fund.vintage}}</td>
+                                <td width="5%"><span *ngIf="fund.vintage != 0">{{fund.vintage}}</span></td>
                                 <td width="10%"></td>
-                                <td width="10%"></td>
+                                <td width="10%">{{fund.updateDate}}</td>
                                 <td width="5%">
                                     <a><i class="glyphicon glyphicon-search"></i></a>
                                     <a><i class="glyphicon glyphicon-file"></i></a>
