--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -282,25 +282,25 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-3"><b>DPI</b></td>
-                                    <td class="col-md-2">{{fund.dpi}}</td>
+                                    <td class="col-md-2">{{fund.dpi}}x</td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-3"><b>Gross TVPI</b></td>
-                                    <td class="col-md-2">{{fund.grossTvpi}}</td>
+                                    <td class="col-md-2">{{fund.grossTvpi}}x</td>
                                 </tr>
                             </table>
                             <table class=" col-md-4 table-striped table-condensed">
                                 <tr>
                                     <td class="col-md-3"><b>Gross IRR</b></td>
-                                    <td class="col-md-2">{{fund.grossIrr}}</td>
+                                    <td class="col-md-2">{{fund.grossIrr}}%</td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-3"><b>Net TVPI</b></td>
-                                    <td class="col-md-2">{{fund.netTvpi}}</td>
+                                    <td class="col-md-2">{{fund.netTvpi}}x</td>
                                 </tr>
                                 <tr>
                                     <td class="col-md-3"><b>Net IRR</b></td>
-                                    <td class="col-md-2">{{fund.netIrr}}</td>
+                                    <td class="col-md-2">{{fund.netIrr}}%</td>
                                 </tr>
                             </table>
                         </div>
