1.Pagination bug fix. 2. Autogrow bug fix 3. Tarragon monitoring charts changes and data update

--- a/nicnbk-ui-angular2/src/app/m2s2/view/general-memo-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/general-memo-edit.component.html
@@ -171,7 +171,8 @@
             </div>
             <div class="row top-buffer withpadding">
                 <div class="col-md-12 nopadding">
-                    <textarea  pInputTextarea autoResize="autoResize" spellcheck="false"  class="form-control" [(ngModel)]="memo.topic1"></textarea>
+                    <!--<textarea  pInputTextarea autoResize="autoResize" spellcheck="false"  class="form-control" [(ngModel)]="memo.topic1"></textarea>-->
+                    <textarea spellcheck="false"  class="form-control" [(ngModel)]="memo.topic1"></textarea>
                 </div>
             </div>
             <div class="row top-buffer withpadding">
