--- a/nicnbk-ui-angular2/src/app/m2s2/view/pe-memo-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/pe-memo-edit.component.html
@@ -21,7 +21,61 @@
                     </div>
                 </div>
             </div>
-            <div class="row top-buffer" >
+            <div class="jumbotron">
+                <div class="row">
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label class="control-label col-md-1" for="firmSelect" ><b>Firm:</b></label>
+                            <div class="col-md-5">
+                                <select class="form-control" id="firmSelect" [(ngModel)]="memo.firm.id" name="firmId" (change)="getFirmDataOnChange($event.target.value)">
+                                    <option *ngFor="let item of firmList" [value]="item.id">{{item.name}}</option>
+                                </select>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="row">
+                    <table class="col-md-12 table-striped table-condensed">
+                        <tr>
+                            <td class="col-md-3"><b>AUM (mln)</b></td>
+                            <td class="col-md-3">{{memo?.firm?.aum}}</td>
+                            <td class="col-md-3"><b>Strategy:</b></td>
+                            <td class="col-md-3">{{memo?.firm?.strategy}}</td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-3"><b>Inception</b></td>
+                            <td class="col-md-3">{{memo?.firm?.foundedYear}}</td>
+                            <td class="col-md-3"><b>Industry focus:</b></td>
+                            <td class="col-md-3">{{memo?.firm?.industryFocus}}</td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-3"><b>Investment team size:</b></td>
+                            <td class="col-md-3">{{memo?.firm?.invTeamSize}}</td>
+                            <td class="col-md-3"><b>Geography focus:</b></td>
+                            <td class="col-md-3">{{memo?.firm?.geographyFocus}}</td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-3"><b>Operations team size:</b></td>
+                            <td class="col-md-3">{{memo?.firm?.opsTeamSize}}</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="row">
+                    <hr style="border-top: 1px solid #B5AEAE"/>
+                    <h4>Funds</h4>
+                    <table class="col-md-12 table-striped table-condensed">
+                        <th>FUND</th>
+                        <th>STATUS</th>
+                        <th>VINTAGE</th>
+                        <tr *ngFor="let fund of foundFundsList">
+                            <td width="15%">{{fund.fundName}}</td>
+                            <td width="5%">{{fund.status}}</td>
+                            <td width="5%">{{fund.vintage}}</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="row top-buffer">
                 <div class="col-md-12">
                     <!--<div class="col-md-2">-->
                         <!--<a [routerLink]="['/m2s2/list/']" class="btn btn-default pull-left">Back</a>-->
@@ -166,6 +220,77 @@
                     </div>
                 </div>
             </div>
+            <span *ngIf="memo.fund != null">
+                <div class="jumbotron">
+                    <div class="row">
+                        <form class="form-horizontal">
+                            <div class="form-group">
+                                <label class="control-label col-md-1" for="fundSelect" ><b>Fund:</b></label>
+                                <div class="col-md-5">
+                                    <select class="form-control" id="fundSelect" [(ngModel)]="memo.fund.id" name="fundId" (change)="getFundData($event.target.value)">
+                                        <option *ngFor="let item of fundList" [value]="item.id">{{item.name}}</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="row">
+                        <table class="col-md-12 table-striped table-condensed">
+                            <tr>
+                                <td class="col-md-3"><b>Status</b></td>
+                                <td class="col-md-3">{{memo?.fund?.status}}</td>
+
+                                <td class="col-md-3" *ngIf="memo.fund.status == 'Opening soon'"><b>Opening schedule</b></td>
+                                <td class="col-md-3" *ngIf="memo.fund.status == 'Opening soon'">{{memo?.fund?.openingSchedule}}</td>
+
+                                <td class="col-md-3" *ngIf="memo.fund.status == 'Open'"><b>First close</b></td>
+                                <td class="col-md-3" *ngIf="memo.fund.status == 'Open'">{{memo?.fund?.firstClose}}</td>
+
+                                <td class="col-md-3" *ngIf="memo.fund.status == 'Closed'"><b>&nbsp;</b></td>
+                                <td class="col-md-3" *ngIf="memo.fund.status == 'Closed'">&nbsp;</td>
+                            </tr>
+                            <tr>
+                                <td class="col-md-3"><b>Size, mn</b></td>
+                                <td class="col-md-3">{{memo?.fund?.fundSize}}M {{memo?.fund?.currency}}</td>
+                                <td class="col-md-3"><b>Predecessor fund invested, %</b></td>
+                                <td class="col-md-3">{{memo?.fund?.predecessorInvestedPct}}</td>
+                            </tr>
+                            <tr>
+                                <td class="col-md-3"><b>Strategy</b></td>
+                                <td class="col-md-3">{{memo?.fund?.strategy}}</td>
+                                <td class="col-md-3"><b>Geography:</b></td>
+                                <td class="col-md-3">{{memo?.fund?.geography}}</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <label class="col-md-2"><b>Suitability(Y/N)</b></label>
+                            <div class="col-md-1">
+                                <label class="checkbox-inline">
+                                    <input type="radio" [checked]="!memo.fund.suitable"
+                                           (click)="setNonSuitable()" name="suitability" value=false/>
+                                    <span>N</span>
+                                </label>
+                            </div>
+                            <div class="col-md-1">
+                                <label class="checkbox-inline">
+                                    <input type="radio" name="suitability" [checked]="memo.fund.suitable"
+                                           (click)="setSuitable()" value=true/>
+                                    <span>Y</span>
+                                </label>
+                            </div>
+                            <div class="col-md-1">&nbsp;</div>
+                            <label for="nonsuitableReason" class="col-md-1">If No, why</label>
+                            <div class="col-md-5">
+                                <textarea   spellcheck="false"  class="form-control col-md-4" id="nonsuitableReason" maxlength="1000"
+                                            [disabled]="memo.fund.suitable" [(ngModel)]="memo.fund.nonsuitableReason"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </span>
             <a (click)="toggle()">Fund details {{ visible ? '&#9660;' : '&#9658;' }}</a>
             <div [hidden]="!visible">
                 <div class="row top-buffer withpadding">
@@ -265,21 +390,21 @@
                         <div class="col-md-1">
                             <label class="checkbox-inline">
                                 <input type="radio" [checked]="!memo.suitable"
-                                       (click)="setNonSuitable()" name="suitability" value=false/>
+                                       (click)="setNonSuitableTemp()" name="suitabilityTemp" value=false/>
                                 <span>N</span>
                             </label>
                         </div>
                         <div class="col-md-1">
                             <label class="checkbox-inline">
-                                <input type="radio" name="suitability" [checked]="memo.suitable"
-                                       (click)="setSuitable()" value=true/>
+                                <input type="radio" name="suitabilityTemp" [checked]="memo.suitable"
+                                       (click)="setSuitableTemp()" value=true/>
                                 <span>Y</span>
                             </label>
                         </div>
                         <div class="col-md-1">&nbsp;</div>
-                        <label for="nonsuitableReason" class="col-md-1">If No, why</label>
+                        <label for="nonsuitableReasonTemp" class="col-md-1">If No, why</label>
                         <div class="col-md-5">
-                            <textarea   spellcheck="false"  class="form-control col-md-4" id="nonsuitableReason" maxlength="1000"
+                            <textarea   spellcheck="false"  class="form-control col-md-4" id="nonsuitableReasonTemp" maxlength="1000"
                                 [disabled]="memo.suitable" [(ngModel)]="memo.nonsuitableReason"></textarea>
                         </div>
                     </div>
