--- a/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
@@ -23,9 +23,9 @@
         <li class="active">
             <a data-toggle="tab" href="#overview">OVERVIEW</a>
         </li>
-        <!--<li>-->
-            <!--<a data-toggle="tab" href="#meetings_calls">MEETINGS/CALLS</a>-->
-        <!--</li>-->
+        <li (click)="search()">
+            <a data-toggle="tab" href="#meetings_calls">MEETINGS/CALLS</a>
+        </li>
     </ul>
     <br/>
     <div class="tab-content">
@@ -207,6 +207,112 @@
                 </div>
             </div>
         </div>
-        <div id="meetings_calls" class="tab-pane fade in active"></div>
+        <div id="meetings_calls" class="tab-pane fade">
+            <div style="position: relative;" class="withpadding">
+                <div [ngBusy]="busy">
+                    <div class="col-md-12">
+                        <div class="jumbotron">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label for="meetingType">Meeting Type</label>
+                                            <select class="form-control" id="meetingType" [(ngModel)]="memoSearchParams.meetingType">
+                                                <option value="NONE">---</option>
+                                                <option *ngFor = "let type of meetingTypes" [value]="type.code">{{type.nameEn}}</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <label for="fromDateDTPickeer">From</label>
+                                        <div class='input-group date col-md-3' id='fromDateDTPickeer' style="width: 100%">
+                                            <input type='text' class="form-control" id="fromDate" />
+                                        <span class="input-group-addon">
+                                            <span class="glyphicon glyphicon-calendar"></span>
+                                        </span>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <label for="untilDateDTPickeer">To</label>
+                                        <div class='input-group date col-md-3' id='untilDateDTPickeer' style="width: 100%">
+                                            <input type='text' class="form-control" id="toDate"/>
+                                        <span class="input-group-addon">
+                                            <span class="glyphicon glyphicon-calendar"></span>
+                                        </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label for="fundName">Fund</label>
+                                            <input type="text" class="form-control" id="fundName" placeholder="Enter fund name..."
+                                                   [(ngModel)]="memoSearchParams.fundName"/>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <br/>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <button type="button" class="btn btn-success pull-right" (click)="search()">Search</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <label>Total found: <span>{{memoSearchResult?.totalElements > 0 ?  memoSearchResult?.totalElements : 0}}</span></label>
+                        </div>
+                        <div class="row withpadding" style="position: relative; min-height: 80px;">
+                            <div class="row pull-right">
+                                <ul class="pagination" *ngIf="memoSearchResult?.showPageFrom > 0">
+                                    <li><a *ngIf="memoSearchResult?.showPageFrom > 1" (click)="search(memoSearchResult.showPageFrom - 1)">&laquo;</a></li>
+                                    <li *ngFor="let i of range(memoSearchResult.showPageFrom, memoSearchResult.showPageTo)" [class.active]="i == memoSearchResult.currentPage">
+                                        <a (click)="search(i)">{{i}}</a>
+                                    </li>
+                                    <li><a *ngIf="memoSearchResult.showPageTo < memoSearchResult.totalPages" (click)="search(memoSearchResult.showPageTo + 1)">&raquo;</a></li>
+                                </ul>
+                            </div>
+                            <table [ngBusy]="busy" class="table table-hover">
+                                <thead>
+                                <tr>
+                                    <th>MEETING/CALL</th>
+                                    <th>FIRM</th>
+                                    <th>FUND</th>
+                                    <th>DATE</th>
+                                    <th>AUTHOR</th>
+                                    <th>ACTIONS</th>
+                                </tr>
+                                </thead>
+
+                                <tbody>
+                                <tr *ngFor = "let memo of memoList">
+                                    <td width="10%" >{{memo.meetingType}}</td>
+                                    <td width="30%"><a [routerLink]="['/m2s2/edit/', memo.memoType, memo.id]">{{memo.firmName}}</a></td>
+                                    <td width="30%"><a [routerLink]="['/m2s2/edit/', memo.memoType, memo.id]">{{memo.fundName}}</a></td>
+                                    <!--<td width="10%" th:text="${memoItem.meetingDate}"></td>-->
+                                    <td width="10%">{{memo.meetingDate}}</td>
+                                    <td width="10%">{{memo.author}}</td>
+                                    <td width="5%">
+                                        <a><i class="glyphicon glyphicon-trash"></i></a>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <div class="row pull-right">
+                                <ul class="pagination" *ngIf="memoSearchResult?.showPageFrom > 0">
+                                    <li><a *ngIf="memoSearchResult?.showPageFrom > 1" (click)="search(memoSearchResult.showPageFrom - 1)">&laquo;</a></li>
+                                    <li *ngFor="let i of range(memoSearchResult.showPageFrom, memoSearchResult.showPageTo)" [class.active]="i == memoSearchResult.currentPage">
+                                        <a (click)="search(i)">{{i}}</a>
+                                    </li>
+                                    <li><a *ngIf="memoSearchResult.showPageTo < memoSearchResult.totalPages" (click)="search(memoSearchResult.showPageTo + 1)">&raquo;</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
