--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -106,7 +106,7 @@
                 </li>
                 <li [routerLinkActive]="['active']" ><a href="#">Real Estate</a></li>
                 <!--<li [routerLinkActive]="['active']" ><a href="#">Hedge Funds</a></li>-->
-                <li class="dropdown">
+                <li [routerLinkActive]="['active']"  class="dropdown">
                     <!--<a th:href="@{/pe}">Private Equity</a>-->
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         Hedge Funds <span class="bootstrapCaret"></span>
@@ -129,6 +129,15 @@
         </div>
     </nav>
 </div>
+
+<!--<div class="container">-->
+    <!--<div class="row top-buffer" >-->
+        <!--<div class="col-md-12">-->
+            <!--<breadcrumb></breadcrumb>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
+
 
 <router-outlet></router-outlet>
 
