--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-report.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-report.component.html
@@ -4,7 +4,7 @@
             <div class="row top-buffer" >
                 <div class="col-md-12">
                     <ol class="breadcrumb">
-                        <li><a [routerLink]="['/pe/firmSearch']">Private Equity</a></li>
+                        <li><a [routerLink]="['/pe/firmSearch', {params: this.breadcrumbParams}]">Private Equity</a></li>
                         <li class="active">Fund report</li>
                     </ol>
                 </div>
